atualização da sideBar

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
             </div>
 
             <div class="sideBarLinks">
-                <a id="closeButton" onClick="fecharSideBar()">Close Menu</a>
+                <div class="closeMenu" onClick="fecharSideBar()"></div>
                 <a href="#">Send your opinion</a>
                 <a href="#">Gallery</a>
                 <a href="#">Timeline</a>
-            </div>
 
+            </div>
         </section>
 
         <section class="divMain">
